updates and bugfixes